--- a/PETSHOP/style.css
+++ b/PETSHOP/style.css
@@ -1,42 +1,51 @@
 
+*{
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: sans-serif;
+}
 .secao-banner{
     width: 100%;
-    height: 100%;
-    padding: 120px 80px;
+    min-height: 80vh;
+    padding: 5px;
     background-image: url(img/banner-topo.jpg);
     background-position: center;
     background-size: cover;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     
 
 }
 .nome{
     font-size: 20px;
-    margin: 0 0 5px 0;
+    margin: 0;
     font-weight: bold;
-    box-sizing: border-box;
+
 
 }
 .icone{
   width: 30px;
-  margin: 0 0 0 5px;
+  margin: 0;
 }
 .slogan{
 font-size: 14px;
-text-align: center;
+text-align: left;
 font-weight: bold;
 }
 .marca-banner{
     width: 250px;
     color: #3c184e;
-    font-family: sans-serif;
+    
 }
 .container{
     width: 550px;
-    opacity: 80%;
+
     margin: 0 auto;
     box-shadow: #1e1e1f;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255,0.8);
     border-radius: 10px;
     padding: 20px;
     display: block;
@@ -44,7 +53,6 @@ font-weight: bold;
 .titulo{
     
     color: #3c184e;
-    font-family: sans-serif;
     font-weight: 900;
     text-align: center;
     
@@ -60,4 +68,98 @@ font-weight: bold;
 .titulo img{
     width: 15px;
 
+}
+.servicos{
+    width: 100%;
+    text-align: center;
+}
+h2{
+    color: #3c184e;
+    font-weight: 600;
+    text-align: center;
+}
+.listas-dl li{
+    background-color: white;
+    width: 740px;
+    text-align: justify;
+    color: #3c184e;
+    margin: 0 auto;
+    padding: 5px;
+    font-weight: normal;
+    display: inline-block;
+}
+span{
+    font-weight: bold;
+    font-style: italic;
+}
+.servicos img{
+    display: inline-block;
+    margin: 0 auto;
+    padding: 5px;
+    
+}
+.servicos img:hover{
+    transform: scale(1.2);
+}
+.rede-social{
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    padding: 15px;
+    text-align: center;
+    background-color: #3c184e;
+}
+.rede-social p{
+    color: white;
+    text-align: center;
+    font-size: 20px;
+}
+.rede-social a{
+    color: #ffffff;
+    background-color: #3c184e;
+    margin: 5px;
+    padding: 2px;
+    text-decoration: none;
+}
+.rede-social img{
+    width: 25px;
+}
+.rede-social img:hover{
+    transform: scale(1.3);
+}
+.marcas{
+    width: 750px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    margin: 0 auto;
+}
+.marcas img{
+    margin: 5px;
+    padding: 5px;
+}
+.marcas img:hover{
+    transform:scale(1.4);
+}
+.maps p{
+    text-align: center;
+    color: #3c184e;
+    font-weight: 400;
+}
+.maps iframe{
+    margin: 0 auto;
+    border: 0;
+    display: block;
+    width: 600px;
+    height: 450px;
+}
+.rodape{
+    background-color: #3c184e;
+    color: #ffffff;
+    height: 50px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 15px;
+    padding: 5px;
+    margin-bottom: 10px;
 }
